# bigquery-ml-utils

./: .bazelversion  BUILD.bazel  MANIFEST.in  README.md  WORKSPACE.bazel  __init__.py  build_pip_pkg.sh  configure.py  configure.sh  defs.bzl  local_release.sh  release.sh  requirements.txt  setup.py
bazel/: BUILD.bazel  icu.BUILD  icu4c-64_2.patch
bazel/rules_go_stub/go/: def.bzl  deps.bzl
bigquery_ml_utils/inference/transform_predictor/: __init__.py  predictor.py
bigquery_ml_utils/inference/xgboost_predictor/: predictor.py
bigquery_ml_utils/notebooks/: bqml-feature-engineering.ipynb  bqml-inference-remote-model-tutorial.md
bigquery_ml_utils/tests/data/inference/transform_predictor/linear_reg_model/: saved_model.pb
bigquery_ml_utils/tests/data/inference/xgboost_predictor/boosted_tree_classifier_model/: model.bst
bigquery_ml_utils/tests/data/inference/xgboost_predictor/boosted_tree_mixed_feature_model/: model.bst
bigquery_ml_utils/tests/unit/inference/transform_predictor/: predictor_test.py
bigquery_ml_utils/tests/unit/inference/xgboost_predictor/: predictor_test.py
inference/: BUILD.bazel
inference/transform_predictor/: predictor.py
inference/xgboost_predictor/: predictor.py
model_generator/: BUILD.bazel  __init__.py  text_embedding_generator.py
notebooks/: bqml-arima-plus-custom-holiday.ipynb  bqml-arima-xreg.ipynb  bqml-feature-engineering.ipynb  bqml-feature-transform-module-tutorial.ipynb  bqml-generate-embedding-with-multimodalembedding-model.ipynb  bqml-generate-text-embedding-model.ipynb  bqml-inference-remote-model-tutorial.md  bqml-model-monitoring-introduction.ipynb  bqml-model-monitoring-tutorial.ipynb  bqml-monash-benchmarking.ipynb  bqml-preprocessing-functions.ipynb
sql_scripts/remote_inference/: README.md  object_table_inference_loop_example.sql  object_table_inference_loop_generic.sql  structured_table_inference_loop_example.sql  structured_table_inference_loop_generate_embedding_example.sql  structured_table_inference_loop_generate_text_example.sql  structured_table_inference_loop_generic.sql
sql_utils/: BUILD.bazel
sql_utils/base/: bits.cc  bits.h  endian.h  general_trie.h  logging.cc  logging.h  map_traits.h  map_util.h  mathlimits.cc  mathlimits.h  mathutil.cc  mathutil.h  no_destructor.h  ret_check.cc  ret_check.h  simple_reference_counted.h  source_location.h  status.h  status_builder.cc  status_builder.h  status_macros.h  status_payload.cc  status_payload.h  time_proto_util.cc  time_proto_util.h  unaligned_access.h
sql_utils/common/: errors.cc  errors.h  multiprecision_int.cc  multiprecision_int.h  multiprecision_int_impl.cc  multiprecision_int_impl.h  status_payload_utils.cc  status_payload_utils.h  utf_util.cc  utf_util.h
sql_utils/proto/: internal_error_location.proto
sql_utils/public/: annotation.proto  civil_time.cc  civil_time.h  deprecation_warning.proto  error_helpers.cc  error_helpers.h  error_location.proto  interval_value.cc  interval_value.h  numeric_constants.h  numeric_value.h  options.proto  parse_location.cc  parse_location.h  parse_location_range.proto  simple_value.proto  strings.cc  strings.h  time_zone_util.cc  time_zone_util.h  type.h  type.proto  value_content.h
sql_utils/public/functions/: arithmetics.h  arithmetics_internal.h  cast_date_time.cc  cast_date_time.h  convert.h  convert_internal.h  date_time_util.cc  date_time_util.h  date_time_util_internal.cc  date_time_util_internal.h  datetime.proto  input_format_string_max_width.cc  input_format_string_max_width.h  parse_date_time.cc  parse_date_time.h  parse_date_time_utils.cc  parse_date_time_utils.h  util.cc  util.h
sql_utils/public/proto/: type_annotation.proto
sql_utils/public/types/: annotation.h  simple_value.h  timestamp_util.cc  timestamp_util.h  type.h  value_representations.h
tensorflow_ops/: BUILD.bazel  __init__.py  constants.h  date_ops.cc  date_ops.py  date_ops_kernel.cc  datetime_ops.cc  datetime_ops.py  datetime_ops_kernel.cc  load_module.py  time_ops.cc  time_ops.py  time_ops_kernel.cc  timestamp_kernels.cc  timestamp_ops.cc  timestamp_ops.py  timestamp_ops_kernel.cc  utils.cc  utils.h
tests/data/inference/transform_predictor/boosted_tree_classifier_model/: model.bst
tests/data/inference/transform_predictor/dnn_classifier_model/: saved_model.pb
tests/data/inference/transform_predictor/dnn_classifier_model_predict_signature/: saved_model.pb
tests/data/inference/transform_predictor/linear_reg_model_custom_op/: saved_model.pb
tests/data/inference/xgboost_predictor/boosted_tree_aft_model/: model.bst
tests/data/inference/xgboost_predictor/boosted_tree_cox_model/: model.bst
tests/data/inference/xgboost_predictor/sparse_feature_model_3/: model.bst
tests/unit/inference/transform_predictor/: predictor_test.py
tests/unit/inference/xgboost_predictor/: predictor_test.py
tests/unit/tensorflow_ops/: cast_to_date_from_string_test.py  cast_to_datetime_from_string_test.py  cast_to_time_from_string_test.py  cast_to_time_from_time_test.py  date_add_test.py  date_diff_test.py  date_from_components_test.py  date_from_datetime_test.py  date_from_timestamp_test.py  date_from_unix_date_test.py  date_sub_test.py  date_trunc_test.py  datetime_add_test.py  datetime_diff_test.py  datetime_from_components_test.py  datetime_from_date_and_time_test.py  datetime_from_date_test.py  datetime_from_timestamp_test.py  datetime_sub_test.py  datetime_trunc_test.py  extract_date_from_datetime_test.py  extract_from_date_test.py  extract_from_datetime_test.py  extract_from_time_test.py  extract_from_timestamp_test.py  extract_time_from_datetime_test.py  format_date_test.py  format_datetime_test.py  format_time_test.py  format_timestamp_test.py  last_day_from_date_test.py  last_day_from_datetime_test.py  parse_date_test.py  parse_datetime_test.py  parse_time_test.py  parse_timestamp_test.py  safe_parse_date_test.py  safe_parse_datetime_test.py  safe_parse_time_test.py  safe_parse_timestamp_test.py  (+23 more)
tf_dependency/: BUILD.bazel  BUILD.tpl  build_defs.bzl.tpl  tf_configure.bzl
(+61 files in other folders)
