# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])

cc_binary(
    name = "timestamp_ops.so",
    srcs = [
        "constants.h",
        "timestamp_kernels.cc",
        "timestamp_ops.cc",
    ],
    copts = select({
        "//conditions:default": [
            "-pthread",
            "-std=c++17",
            "-D_GLIBCXX_USE_CXX11_ABI=0",
        ],
    }),
    features = select({
        "//conditions:default": [],
    }),
    linkshared = 1,
    deps = [
        "//sql_utils",
        "@com_google_absl//absl/strings",
        "@local_config_tf//:libtensorflow_framework",
        "@local_config_tf//:tf_header_lib",
    ],
)

py_library(
    name = "tensorflow_ops_py",
    srcs = glob(include = ["**/*_ops.py"]),
    data = [":timestamp_ops.so"],
    srcs_version = "PY2AND3",
)

py_library(
    name = "tensorflow_ops",
    srcs = glob(include = ["**/__init__.py"]),
    srcs_version = "PY2AND3",
    deps = [
        ":tensorflow_ops_py",
    ],
)
